syntax = "proto3"; 

option csharp_namespace = "BlazorApp2"; 

package WeatherForecast; 

import "google/protobuf/timestamp.proto"; 

service WeatherForecast { 
	rpc GetWeather (WeatherRequest) returns (WeatherReply); 
} 

message WeatherReply { 
	repeated WeatherInfo forecasts = 1; 
	string name = 2;
} 

message WeatherRequest {
  string name = 1;
}

message WeatherInfo { 
	google.protobuf.Timestamp dateTimeStamp = 1; 
	int32 temperatureC = 2; 
	string summary = 3; 
}